Fixed projectlist issue where last item will not be accessible via scrollbar

--- a/collaborative/src/components/ProjectPreviewList/ProjectPreviewItem/ProjectPreviewItem.module.css
+++ b/collaborative/src/components/ProjectPreviewList/ProjectPreviewItem/ProjectPreviewItem.module.css
@@ -5,9 +5,10 @@
   gap: 10px;
   padding: 15px;
   border-radius: 10px;
-  overflow: hidden;
-  min-height: 184px;
   transition: all 0.5s;
+  overflow: hidden;
+  min-width: 208px;
+  max-width: 208px;
   min-height: 225px;
   max-height: 225px;
 }
